# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  repo config.txt
gendiff/: __init__.py  app.py  differ.py
gendiff/scripts/: differ.py  parsers.py  utils.py
gendiff/tests/: test_diff.py  test_json_diff.py
gendiff/tests/fixtures/: result.txt
