[tool.poetry]
name = "zedchi_gendiff"
version = "0.1.6"
description = "App shows difference between two files passed as arguments"
authors = ["Zed-chi <zed-chi@mail.ru>"]
repository = "https://github.com/Zed-chi/python-project-lvl2"
license = "MIT"
classifiers = [
    "Topic :: Utilities",
]
packages = [
    { include = "gendiff"}
]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"

[tool.poetry.scripts]
gendiff = "gendiff.app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
